--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -12,7 +12,13 @@ html{
     /* font-size: 62.5%; */
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e7e2e2;
+    background-color: #efefef;
+}
+.banner-sale{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 .grid{
     width: 1200px;
@@ -30,7 +36,33 @@ html{
     margin-right: -5px; */
     /* background-color: blueviolet; */
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+/* demo slideshow */
+.grid_column-slide10{
+    margin-left: 109px;
+    margin-right: 109px;
+    /* width: 84%; */
+    /* background-color: aquamarine; */
+}
+.grid_column-slide4{
+    width: 45%;
+    background-color: rgb(255, 255, 255);
+    margin-left: 13px;
+    margin-right: 13px;
+    margin-bottom: 24px;
+}
+.grid_column-slide2{
+    width: 20%;
+    background-color: rgb(255, 255, 255);
+    margin-left: 13px;
+    margin-right: 13px;
+    margin-bottom: 24px;
+}
+
+/* demo slideshow */
+
 .grid_column-2{
     width: 19%;
     background-color: rgb(255, 255, 255);
